# cocos2d-x-lite

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  clang-fixes.yaml
.github/workflows/: clangtidy-android.yml  clangtidy.yml  superlinter.yml
cocos/: Android.mk
cocos/base/: Data.cpp  Scheduler.cpp  UTFString.h  ccConfig.h
cocos/base/threading/: MessageQueue.cpp
cocos/bindings/auto/: jsb_gfx_auto.cpp  jsb_scene_auto.cpp  jsb_scene_auto.h
cocos/bindings/jswrapper/: Value.cpp  Value.h
cocos/bindings/jswrapper/v8/: HelperMacros.h  Object.cpp  ScriptEngine.cpp  Utils.cpp
cocos/bindings/manual/: jsb_conversions.h  jsb_drawbatch2d_ext.cpp  jsb_drawbatch2d_ext.h  jsb_global.cpp  jsb_scene_manual_ext.cpp
cocos/platform/: Application.cpp
cocos/platform/android/: CCCanvasRenderingContext2D-android.cpp
cocos/platform/android/java/src/com/cocos/lib/: CocosHelper.java
cocos/platform/android/java/src/org/cocos2dx/lib/: ByteCodeGenerator.java  Cocos2dxActivity.java  Cocos2dxHelper.java  JSFunctionProxy.java
cocos/platform/android/java/src/org/cocos2dx/test/: Main.java  Sample.java
cocos/platform/android/jni/: JniHelper.cpp  JniHelper.h
cocos/platform/android/libcocos2dx/: build.gradle
cocos/platform/apple/: CCDevice-apple.mm
cocos/platform/mac/: CCApplication-mac.mm
cocos/renderer/: GFXDeviceManager.h
cocos/renderer/gfx-gles3/: GLES3Context.cpp
cocos/renderer/pipeline/: PipelineStateManager.cpp  RenderPipeline.cpp
cocos/renderer/pipeline/forward/: ForwardPipeline.cpp
cocos/scripting/js-bindings/jswrapper/chakracore/: Object.cpp  Object.hpp
cocos/scripting/js-bindings/jswrapper/jsc/: Class.cpp  HelperMacros.h  Object.hpp  Object.mm
cocos/scripting/js-bindings/jswrapper/sm/: HelperMacros.h
cocos/scripting/js-bindings/jswrapper/v8/: Object.cpp  Object.hpp  ScriptEngine.cpp  ScriptEngine.hpp
cocos/scripting/js-bindings/manual/: jsb_gfx_manual.cpp  jsb_jni_manual.cpp  jsb_jni_manual.hpp  jsb_jni_utils.cpp  jsb_jni_utils.h  jsb_module_register.cpp
templates/js-template-link/: CMakeLists.txt
templates/js-template-link/frameworks/runtime-src/: CMakeLists.txt
templates/js-template-link/frameworks/runtime-src/proj.android-studio/: build.gradle  gradle.properties  settings.gradle
templates/js-template-link/frameworks/runtime-src/proj.android-studio/app/: build.gradle
templates/js-template-link/frameworks/runtime-src/proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
tools/tojs/: gfx.ini  scene.ini
tools/travis-scripts/: before-install.sh  generate-bindings.sh  run-script.sh
utils/: download-deps.js
